--- a/Assignment 2.html
+++ b/Assignment 2.html
@@ -53,7 +53,7 @@
           <p>I am Ken Keli, an experienced web developer with a strong foundation in creating responsive, user-friendly websites.</p>
         </div>
         <div class="col-md-6">
-          <img src="https://unsplash.com/photos/a-person-holding-a-memory-card-in-their-hand-yDfEf2xrM7I" alt="About Me" width="500" height="300" class="img-fluid">
+          <img src="images/interface.jpg" width="300" height="300" alt="About Me" width="500" height="300" class="img-fluid">
         </div>
       </div>
     </div>
@@ -66,7 +66,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card">
-            <img src="veer.jpg" class="card-img-top" alt="veer" length="300" width="300">
+            <img src="images/veer.jpg" class="card-img-top" alt="veer" length="300" width="300">
             <div class="card-body">
               <h5 class="card-title">Veer</h5>
               <p class="card-text">Veer is a revolutionary web application that makes traveling in Kenya easier and more enjoyable as it provides travelers with insights into the best places to stay, eat and explore.</p>
@@ -78,7 +78,7 @@
 
         <div class="col-md-4">
           <div class="card">
-            <img src="thrive.jpg" class="card-img-top" alt="unity">
+            <img src="images/thrive.jpg" class="card-img-top" alt="unity">
             <div class="card-body">
               <h5 class="card-title">Unity Thrive</h5>
               <p class="card-text">A non-profit Community Website best for: Promoting a cause or building a community.</p>
